--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,28 +2,23 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Minkyoung Song
     - name: Date of Birth
-      value: 14th March 1879
+      value: 5th June 2001
     - name: Languages
-      value: English, German
+      value: Korean, English
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: M.S
+      institution: Artificial Intelligence, POSTECH
+      year: 2025. 02 ~
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - advised by Prof. <a href="http://namhoonlee.github.io">Namhoon Lee</a>
+    - title: B.S.
+      institution: 
+      year: 2020. 03 ~ 2024. 02
       description:
         - Description 1.
         - Description 2.
