--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -4,89 +4,109 @@
     - name: Full Name
       value: Minkyoung Song
     - name: Date of Birth
-      value: 5th June 2001
+      value: 5th June, 2001
     - name: Languages
-      value: Korean, English
+      value: Korean(Native), English(Fluent)
 
 - title: Education
   type: time_table
   contents:
     - title: M.S
-      institution: Artificial Intelligence, POSTECH
+      institution: POSTECH
       year: 2025. 02 ~
       description:
+        - Graduate School of Artificial Intelligence
+        - Computational Optimization Lab
         - advised by Prof. <a href="http://namhoonlee.github.io">Namhoon Lee</a>
     - title: B.S.
-      institution: 
+      institution: Hanyang University (erica)
       year: 2020. 03 ~ 2024. 02
       description:
-        - Description 1.
-        - Description 2.
+        - Department of Military Information Engineering
+        - Computer Science (Double Major)
+        - "GPA: 4.26/4.5 (Summa Cum Laude)"
+    - title: High School
+      institution: Yangseo High School
+      year: 2017. 03 ~ 2020. 02
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
+    - title:   Intern at CU Big Data Team
+      institution: BGF Retail
+      year: 2024. 06 ~ 2024. 08
+      
+    - title:  Trainee at Big Data Fintech AI 8th
+      institution: Seoul National University Graduate School of Data Science
+      year: 2024. 02 ~ 2024. 08
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
+    - title:  Research Student
+      institution: Hanyang University
+      year: 2022. 09 ~ 2023. 06
+      
+    - title: Vice President at SONAR Academic Club
+      institution: Hanyang University
+      year: 2022. 03 ~ 2023. 02
+      description: SONAR, the Departmental Academic Society for Information and Communication Engineering
 
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
+    - title: Department Student Council of Military Information Engineering
+      institution: Hanyang University
+      year: 2021. 03 ~ 2022. 02
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
 
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+# - title: Open Source Projects
+#   type: time_table
+#   contents:
+#     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+#       year: 2015-now
+#       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2024. 08
       items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
+        - Capstone Project Presentation Excellence Award
+        - Seoul National University Graduate School of Data Science
+    - year: 2024. 08
       items:
-        - Max Planck Medal
+        - Attendance Excellence Award, Seoul National University Graduate School of Data Science
+    - year: 2024. 08
+      items:
+        - Academic Excellence Award, Hanyang University
+    - year: 2024. 02
+      items:
+        - Student Contribution Award, Hanyang University
+    - year: 2024. 02
+      items:
+        - Hanyang Engineering Excellence Graduation (HEEE), Hanyang University, Korea
+    - year: 2020. 09 ~ 2024. 02
+      items:
+        - Ansan City Scholarship, Ansan Human Talent Cultivation Foundation
+    - year: 2020. 06 ~ 2024. 02
+      items:
+        - Academic Excellence Scholarship - Hanyang Brain (Merit Based, Excellence Grades) Scholarship, Hanyang University
+    - year: 2022. 05
+      items:
+        -  Excellence Award - the 9th National University Student IEEE Quiz Competition
+    - year: 2020. 08
+      items:
+        - 2nd Place Award - the 3rd Online Game Jam, ILLISOFT & Hanyang University
 
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
 
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+# - title: Academic Interests
+#   type: nested_list
+#   contents:
+#     - title: Topic 1.
+#       items:
+#         - Description 1.
+#         - Description 2.
+#     - title: Topic 2.
+#       items:
+#         - Description 1.
+#         - Description 2.
+
+# - title: Other Interests
+#   type: list
+#   contents:
+#     - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
