--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -66,12 +66,11 @@
   contents:
     - year: 2024. 08
       items:
-        - Capstone Project Presentation Excellence Award
-        - Seoul National University Graduate School of Data Science
+        - Capstone Project Presentation Excellence Award, Seoul National University Graduate School of Data Science
     - year: 2024. 08
       items:
         - Attendance Excellence Award, Seoul National University Graduate School of Data Science
-    - year: 2024. 08
+    - year: 2024. 02
       items:
         - Academic Excellence Award, Hanyang University
     - year: 2024. 02
@@ -88,7 +87,7 @@
         - Academic Excellence Scholarship - Hanyang Brain (Merit Based, Excellence Grades) Scholarship, Hanyang University
     - year: 2022. 05
       items:
-        -  Excellence Award - the 9th National University Student IEEE Quiz Competition
+        -  Excellence Award - the 9th National University Student IEEE Quiz Competition, IEEE & KITS
     - year: 2020. 08
       items:
         - 2nd Place Award - the 3rd Online Game Jam, ILLISOFT & Hanyang University
