--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -19,7 +19,7 @@
         - Computational Optimization Lab
         - advised by Prof. <a href="http://namhoonlee.github.io">Namhoon Lee</a>
     - title: B.S.
-      institution: Hanyang University (erica)
+      institution: Hanyang University erica
       year: 2020. 03 ~ 2024. 02
       description:
         - Department of Military Information Engineering
@@ -78,7 +78,7 @@
         - Student Contribution Award, Hanyang University
     - year: 2024. 02
       items:
-        - Hanyang Engineering Excellence Graduation (HEEE), Hanyang University, Korea
+        - Hanyang Engineering Excellence Graduation (HEEE), Hanyang University
     - year: 2020. 09 ~ 2024. 02
       items:
         - Ansan City Scholarship, Ansan Human Talent Cultivation Foundation
