--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -19,7 +19,7 @@
         - Computational Optimization Lab
         - advised by Prof. <a href="http://namhoonlee.github.io">Namhoon Lee</a>
     - title: B.S.
-      institution: Hanyang University erica
+      institution: Hanyang University
       year: 2020. 03 ~ 2024. 02
       description:
         - Department of Military Information Engineering
@@ -64,6 +64,9 @@
 - title: Honors and Awards
   type: time_table
   contents:
+    - year: 2025. 08
+      items:
+        - Woosuk Cultural Foundation Scholarship
     - year: 2024. 08
       items:
         - Capstone Project Presentation Excellence Award, Seoul National University Graduate School of Data Science
