--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -66,7 +66,10 @@
   contents:
     - year: 2025. 08
       items:
-        - Woosuk Cultural Foundation Scholarship
+        - Wooseok Cultural Foundation Scholarship
+    - year: 2025. 03
+      items:
+        - Graduate Admission Scholarship for Academic Excellence, POSTECH
     - year: 2024. 08
       items:
         - Capstone Project Presentation Excellence Award, Seoul National University Graduate School of Data Science
