--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -32,6 +32,10 @@
 - title: Experience
   type: time_table
   contents:
+    - title:   1st Graduate Student Monitoring Committee for the BK21 FOUR
+      institution: POSTECH
+      year: 2025. 10 ~ 2026. 02
+      
     - title:   Intern at CU Big Data Team
       institution: BGF Retail
       year: 2024. 06 ~ 2024. 08
