--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -32,7 +32,7 @@
 - title: Experience
   type: time_table
   contents:
-    - title:   1st Graduate Student Monitoring Committee for the BK21 FOUR
+    - title:   1st BK21 FOUR Monitoring Committee
       institution: POSTECH
       year: 2025. 10 ~ 2026. 02
       
